--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -15,12 +15,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
-        <ImageView
-            android:id="@+id/list_image"
-            android:layout_width="70dip"
-            android:layout_height="70dip"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/nailpolish" />
     </LinearLayout>
 
     <!-- Information-->
@@ -37,9 +31,7 @@
         android:textStyle="bold"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/thumbnail"
-        android:layout_toEndOf="@+id/thumbnail"
-        android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp" />
+        android:layout_toEndOf="@+id/thumbnail" />
 
     <TextView
         android:id="@+id/brand_tv"
