--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -33,13 +33,11 @@
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginTop="23dp"
+        tools:ignore="MissingConstraints"
+        android:layout_marginTop="17dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/textView8"
-        app:layout_constraintHorizontal_bias="0.181" />
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView_id"
@@ -48,13 +46,11 @@
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView_name"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.37" />
+        tools:ignore="MissingConstraints"
+        app:layout_constraintLeft_toRightOf="@+id/textView10"
+        android:layout_marginLeft="81dp"
+        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView_name" />
 
     <TextView
         android:id="@+id/textView_brand"
@@ -63,13 +59,11 @@
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginTop="9dp"
+        tools:ignore="MissingConstraints"
+        android:layout_marginTop="11dp"
         app:layout_constraintTop_toBottomOf="@+id/textView_id"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.37" />
+        app:layout_constraintLeft_toRightOf="@+id/textView11"
+        android:layout_marginLeft="50dp" />
 
     <TextView
         android:id="@+id/textView_collection"
@@ -78,13 +72,11 @@
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginTop="9dp"
+        tools:ignore="MissingConstraints"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/textView_brand"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.37" />
+        app:layout_constraintLeft_toRightOf="@+id/textView12"
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:id="@+id/textView_color"
@@ -93,53 +85,35 @@
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginTop="9dp"
+        tools:ignore="MissingConstraints"
+        android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@+id/textView_collection"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.37" />
+        app:layout_constraintLeft_toRightOf="@+id/textView13"
+        android:layout_marginLeft="54dp" />
 
     <TextView
         android:id="@+id/textView_finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="9dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="9dp"
         app:layout_constraintTop_toBottomOf="@+id/textView_color"
-        app:layout_constraintHorizontal_bias="0.37" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/text_Name"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_name"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toRightOf="@+id/textView14"
+        android:layout_marginLeft="50dp" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:text="@string/text_ID"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_id"
-        app:layout_constraintHorizontal_bias="0.098"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/textView_id" />
+        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView_name"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView11"
@@ -148,12 +122,10 @@
         android:text="@string/text_Brand"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/textView_brand"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.16"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_brand" />
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView12"
@@ -162,11 +134,10 @@
         android:text="@string/text_collection"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginTop="11dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView11"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/textView_collection"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_collection" />
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:id="@+id/textView13"
@@ -175,12 +146,9 @@
         android:text="@string/Color"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/textView_color"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.148"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_color" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView_color"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView14"
@@ -189,24 +157,20 @@
         android:text="@string/Text_Finish"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/textView_finish"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_finish"
-        app:layout_constraintHorizontal_bias="0.16" />
+        android:layout_marginTop="9dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView13"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/button_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Button_Delete"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.028"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button_edit" />
+        android:layout_marginTop="71dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView14"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/button_edit"
@@ -214,11 +178,8 @@
         android:layout_height="wrap_content"
         android:text="@string/Button_Edit"
         app:layout_constraintLeft_toRightOf="@+id/button_delete"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.028"
-        android:layout_marginTop="71dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginTop="72dp"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
 </android.support.constraint.ConstraintLayout>
