--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -35,6 +35,7 @@
         android:text="@string/edittext_hint_name"
         android:textColor="@android:color/black"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:ignore="MissingConstraints" />
@@ -164,22 +165,29 @@
 
     <Button
         android:id="@+id/button_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="71dp"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="297dp"
+        android:layout_height="64dp"
         android:text="@string/button_delete_nailpolish"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/button_edit"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/button_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="72dp"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="297dp"
+        android:layout_height="64dp"
         android:text="@string/button_edit_nailpolish"
-        app:layout_constraintLeft_toRightOf="@+id/button_delete"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        android:layout_marginTop="65dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView14"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.507" />
 
 </android.support.constraint.ConstraintLayout>
