--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -47,7 +47,8 @@
         android:layout_marginLeft="81dp"
         android:layout_marginTop="18dp"
         android:text="@string/edittext_hint_id"
-        android:textColor="@android:color/black"
+        android:textAllCaps="false"
+        android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
         app:layout_constraintLeft_toRightOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/textView_name"
@@ -60,7 +61,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="11dp"
         android:text="@string/edittext_hint_brand"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
         app:layout_constraintLeft_toRightOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/textView_id"
@@ -73,7 +74,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="10dp"
         android:text="@string/edittext_hint_collection"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
         app:layout_constraintLeft_toRightOf="@+id/textView12"
         app:layout_constraintTop_toBottomOf="@+id/textView_brand"
@@ -86,7 +87,7 @@
         android:layout_marginLeft="54dp"
         android:layout_marginTop="12dp"
         android:text="@string/edittext_hint_color"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
         app:layout_constraintLeft_toRightOf="@+id/textView13"
         app:layout_constraintTop_toBottomOf="@+id/textView_collection"
@@ -99,7 +100,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="9dp"
         android:text="@string/edittext_hint_finish"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
         app:layout_constraintLeft_toRightOf="@+id/textView14"
         app:layout_constraintTop_toBottomOf="@+id/textView_color" />
