--- a/app/src/main/res/layout/activity_view_database.xml
+++ b/app/src/main/res/layout/activity_view_database.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <!-- todo: set "up" button style! -->
+    
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        theme="@style/ToolbarColoredBackArrow"
-        title="@string/toolbar_title_main"
-        titleTextColor="@android:color/background_light"
+        android:theme="@style/ToolbarColoredBackArrow"
+        android:title="@string/toolbar_title_main"
+        app:titleTextColor="@android:color/background_light"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:background="?attr/colorPrimary"
