--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -161,4 +161,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.027" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="148dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="11dp"
+        android:scaleType="center"
+        app:layout_constraintHorizontal_bias="0.043"
+        app:layout_constraintLeft_toRightOf="@+id/imageButton"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_finish"
+        app:srcCompat="@android:drawable/ic_menu_report_image" />
+
 </android.support.constraint.ConstraintLayout>
