--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -150,19 +150,20 @@
 
     <ImageButton
         android:id="@+id/imageButton"
+        style="@style/AlertDialog.AppCompat"
         android:layout_width="77dp"
         android:layout_height="70dp"
-        app:srcCompat="@android:drawable/ic_menu_add"
-        android:layout_marginTop="11dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_finish"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="11dp"
+        app:layout_constraintHorizontal_bias="0.027"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.027" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_finish"
+        app:srcCompat="@drawable/ic_action_addphoto" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageView"
         android:layout_width="148dp"
         android:layout_height="100dp"
         android:layout_marginLeft="8dp"
