--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -163,14 +163,14 @@
         app:srcCompat="@drawable/ic_action_addphoto" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="148dp"
-        android:layout_height="100dp"
+        android:id="@+id/imageView_addnew"
+        android:layout_width="132dp"
+        android:layout_height="104dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="11dp"
-        android:scaleType="center"
-        app:layout_constraintHorizontal_bias="0.043"
+        android:scaleType="fitCenter"
+        app:layout_constraintHorizontal_bias="0.047"
         app:layout_constraintLeft_toRightOf="@+id/imageButton"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_finish"
