--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -183,12 +183,21 @@
         android:layout_width="297dp"
         android:layout_height="64dp"
         android:text="@string/button_edit_nailpolish"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="146dp"
         app:layout_constraintTop_toBottomOf="@+id/textView14"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.507" />
+
+    <ImageView
+        android:id="@+id/imageView_details"
+        android:layout_width="129dp"
+        android:layout_height="114dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView14"
+        app:srcCompat="@drawable/nailpolish"
+        tools:layout_editor_absoluteX="16dp" />
 
 </android.support.constraint.ConstraintLayout>
