--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         app:theme="@style/ToolbarColoredBackArrow" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView_addnew"
         android:layout_width="286dp"
         android:layout_height="255dp"
         android:layout_marginEnd="8dp"
@@ -70,7 +70,7 @@
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView_addnew" />
 
 
 </android.support.constraint.ConstraintLayout>
