--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -195,9 +195,13 @@
         android:id="@+id/imageView_details"
         android:layout_width="129dp"
         android:layout_height="114dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@+id/textView14"
         app:srcCompat="@drawable/nailpolish"
-        tools:layout_editor_absoluteX="16dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.033" />
 
 </android.support.constraint.ConstraintLayout>
